# apublishtest

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yaml  release.yaml
docs/source/: conf.py
src/apublishtest/: _version.py
