[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "test"
description = """
           Atest
"""
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Simon Hans Hille", email="simon.hille@physik.uzh.ch"},
]
maintainers = [
    {name = "Simon Hans Hille", email="simon.hille@physik.uzh.ch"},
]

license = "MIT"


requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "docformatter",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "myst_nb",
    "ghp-import",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/test/_version.py"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"